[gd_scene load_steps=3 format=2]

[ext_resource path="res://tscn/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/DistancesDialog.gd" type="Script" id=2]

[node name="RouteDialog" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Panel" parent="." index="1"]
margin_left = -496.5
margin_top = -304.0
margin_right = 496.5
margin_bottom = 304.0

[node name="Head" parent="Panel/VBoxContainer" index="0"]
margin_right = 993.0

[node name="Title" parent="Panel/VBoxContainer/Head" index="0"]
text = "Configuration des distances entre les lieux d'Ã©tude"

[node name="Body" parent="Panel/VBoxContainer" index="1"]
margin_right = 993.0
margin_bottom = 548.0

[node name="BodyVContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Body" index="0"]
margin_left = 106.0
margin_top = 217.0
margin_right = 886.0
margin_bottom = 285.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Body/BodyVContainer" index="0"]
margin_right = 780.0
margin_bottom = 24.0

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/Body/BodyVContainer/HBoxContainer" index="0"]
margin_right = 58.0
margin_bottom = 24.0
editable = false

[node name="NewConnectionContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Body/BodyVContainer" index="1"]
margin_top = 28.0
margin_right = 780.0
margin_bottom = 68.0
custom_constants/separation = 35

[node name="NewLocationAOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/BodyVContainer/NewConnectionContainer" index="0"]
margin_right = 220.0
margin_bottom = 40.0
rect_min_size = Vector2( 220, 40 )

[node name="TimeContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Body/BodyVContainer/NewConnectionContainer" index="1"]
margin_left = 255.0
margin_right = 431.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewHourTimeOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/BodyVContainer/NewConnectionContainer/TimeContainer" index="0"]
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/Body/BodyVContainer/NewConnectionContainer/TimeContainer" index="1"]
margin_left = 84.0
margin_top = 13.0
margin_right = 92.0
margin_bottom = 27.0
text = "h"

[node name="NewMinuteTimeOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/BodyVContainer/NewConnectionContainer/TimeContainer" index="2"]
margin_left = 96.0
margin_right = 176.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )

[node name="NewLocationBOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/BodyVContainer/NewConnectionContainer" index="2"]
margin_left = 466.0
margin_right = 686.0
margin_bottom = 40.0
rect_min_size = Vector2( 220, 40 )

[node name="AddBtn" type="Button" parent="Panel/VBoxContainer/Body/BodyVContainer/NewConnectionContainer" index="3"]
margin_left = 721.0
margin_right = 780.0
margin_bottom = 40.0
text = "Ajouter"

[node name="Foot" parent="Panel/VBoxContainer" index="2"]
margin_top = 548.0
margin_right = 993.0
margin_bottom = 608.0

[node name="CloseBtn" type="Button" parent="Panel/VBoxContainer/Foot" index="0"]
margin_left = 467.0
margin_top = 20.0
margin_right = 525.0
margin_bottom = 40.0
text = "Fermer"

[connection signal="pressed" from="Panel/VBoxContainer/Foot/CloseBtn" to="." method="_on_CloseBtn_pressed"]
